<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:padding="3dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eac411"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/titleRoute" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/routeDeparture"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/routeDepartureCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/routeDepartureHint"
                android:inputType="text" />

            <TextView
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/routeArrival"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/routeArrivalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/routeArrivalHint"
                android:inputType="text" />

            <TextView
                android:id="@+id/flightTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrierFlightType"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/rFlightSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/FlightTypeArray" />

            <TextView
                android:id="@+id/carrDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carrierDate"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/routeDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/routeDateHint"
                android:inputType="date" />

            <Button
                android:id="@+id/rSearchBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#eac411"
                android:text="@string/SearchBtn" />

            <Button
                android:id="@+id/rClearBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#eac411"
                android:text="@string/ClearBtn" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>