<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eac411"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewFsCode"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewCarrierFsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewFlightNumber"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewFlightNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewDepartureAirportFsCode"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewDepartureAirportFsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewArrivalAirportFsCode"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewArrivalAirportFsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewNumStops"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewNumStops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewDeptTime"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewDeptTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewArrTime"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewArrTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewFlightEqIata"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewFlightEqIata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewIsCodeShare"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewIsCodeShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewIsWetlease"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewIsWetlease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewServiceType"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewServiceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp" >

        <TextView
            android:id="@+id/txt10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/routeViewReferenceCode"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/rViewReferenceCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>